# python_script_launcher

./: .gitignore  README.md  __init__.py  __main__.py  app.py  client.py  make_exe.py  publish.py  pyproject.toml  tasks.py
scripts/: echo_input.py  file_status.py  hello.py  multi.py  test_modules.py
static/: index.html
